# pabd_cv

./: .gitignore  Dockerfile  pyproject.toml
.dvc/: config
notebooks/: colab_training.ipynb
services/: server_221775.py
src/models/: evaluate_model.py  predict.py  train_model.py
test/: test.py
